Updated the HTML doc to add the Css linking. Updated the Css doc with the class and ID tags

--- a/My Bio.html
+++ b/My Bio.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Thursday activity- My Bio</title>
+    <link rel="stylesheet" type="text/css" href="my_Style_sheet.css">
 </head>
 
 <body>
     <header>
         <h1> Student Bio </h1>
     </header>
-<div>
-    <section>
+<div class="container">
+    <section id="main-bio">
     <h2>Roberto Benites</h2>
-<img src= "C:\Users\guard\OneDrive\Pictures\Screenshots\Screenshot (4).png">
+<img id="bio-image" src= "C:\Users\guard\OneDrive\Pictures\Screenshots\Screenshot (4).png">
 
 <p>Hi! My Name is Roberto Benites. 
     <br>
@@ -25,7 +26,7 @@
 </p>
 </section>
 
-<section>
+<section id="contact-info">
     <h2>Contact Info:</h2>
         <ul>
             <li><strong>Email:</strong>
