Fixed the Bio pic width so it would not push out the Bio text.

--- a/My Bio.html
+++ b/My Bio.html
@@ -17,10 +17,9 @@
 
 <p>Hi! My Name is Roberto Benites. 
     <br>
-    I work at ATT as a Software Engineeer. I am a manager for a team that works on mobile applications, specifically NFL Sunday Ticket.
+    I work at ATT as a Software Engineeer and am currently a manager for a team that works on mobile applications, specifically NFL Sunday Ticket.
     <br>
-    Prior to working at ATT I worked at a small gamming company called Activision. I worked on some games you may have heard of like Guitar Hero, Call of Duty, Spyro, Bond: Blood Stone, True Crimes, blur, and many....many more.
-    I have also done some marketing for companies like Coca-Cola, Johnson &#38 Johnson, Pepsi.co, and some startups.
+    Prior to working at ATT I worked at a small gamming company called Activision and prior to that did marketing for Coca-Cola, Johnson &#38 Johnson, Pepsi.co, and some startups.
     <br>
     I am currently going to CSUN and working towards getting a computer science degree and this semester I am working on a Front End Web development course at UCLA Extensions.
 </p>
